--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^2.0.1",
+    "react-router-dom": "^4.1.2",
     "redux": "^3.0.4",
     "redux-form": "^7.0.3",
     "redux-thunk": "^2.2.0"
